# live-ocrs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tooltip.html  vite.config.ts
frontend/public/: splashscreen.html
frontend/src/: App.tsx  index.css
frontend/src-tauri/: .gitignore  .taurignore  Cargo.toml  installer.wxs  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/tooltip/: Tooltip.tsx  index.tsx
models/ch_ppocr_mobile_v2.0_cls_infer/: ch_ppocr_mobile_v2.0_cls_infer.onnx
src/: app.rs  capture.rs  character.rs  dict.rs  lib.rs  main.rs  view.rs
