[package]
edition = "2021"
name = "live-ocrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.6"
device_query = "2"
geo = "0.28"
geo-clipper = "0.8"
global-hotkey = "0.5"
image = "0.25"
imageproc = "0.25"
itertools = "0.13"
log = "0.4"
ordered-float = "4.2"
parking_lot = "0.12"
rapidocr = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
trie-rs = "0.4"
type_hash = "0.3"
unicode-blocks = "0.1"
xcap = "0.0.10"
#ort = { version = "2.0.0-rc.4", features = ["tensorrt"] }

[features]
debug = []

[workspace]
members = [".", "frontend/src-tauri"]
resolver = "2"

[workspace.dependencies.rapidocr]
features = ["tensorrt"]
git = "https://github.com/wingertge/rapidoc-rs"

[profile.dev.package."*"]
opt-level = 3
