[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.60"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
device_query = "2"
live-ocrs = { path = "../.." }
log = "0.4"
parking_lot = "0.12"
rapidocr = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.7.0", features = [
    "window-show",
    "window-set-size",
    "global-shortcut-all",
    "devtools",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }
